--- a/Marcadores/src/main/webapp/WEB-INF/database.properties
+++ b/Marcadores/src/main/webapp/WEB-INF/database.properties
@@ -1,4 +1,4 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/marcador?useUnicode=true&useJDBCCompliant&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=true
+jdbc.username=gaboptm
+jdbc.password= gabo1306
