--- a/Marcadores/src/main/webapp/WEB-INF/database.properties
+++ b/Marcadores/src/main/webapp/WEB-INF/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/marcador?useUnicode=true&useJDBCCompliant&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=true
-jdbc.username=gaboptm
-jdbc.password= gabo1306
+jdbc.username=gaboptm2
+jdbc.password= Gcf130695?
